--- a/index.html
+++ b/index.html
@@ -18,17 +18,14 @@
         viewBox="0 0 1920 1080"
         id="SVGRoot"
     >
-   <g
-    id="layer1">
-     <ellipse
-        style="fill:#ff5555;stroke-width:0.97601569; transition: all 2000ms ease"
-        id="path45"
-        cx="478.57141"
-        cy="567.14288"
-        rx="287.14285"
-        ry="278.57144" />
-   </g>
- </svg>
+      <g
+        id="layer1">
+        <path
+          id="path47"
+          d="m 102.85715,454.28571 c 0,0 431.42857,-82.85714 708.57142,8.57143 277.14293,91.42857 151.42859,68.57143 485.71433,160 334.2857,91.42857 428.5714,111.42857 491.4286,120"
+          style="fill:none;stroke:#000000;stroke-width:5px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1; transition: all 2000ms ease" />
+      </g>
+    </svg>
  
 
     
