--- a/index.html
+++ b/index.html
@@ -18,15 +18,28 @@
         viewBox="0 0 1920 1080"
         id="SVGRoot"
     >
-      <g
-        id="layer1">
-        <path
-          id="path47"
-          d="m 102.85715,454.28571 c 0,0 431.42857,-82.85714 708.57142,8.57143 277.14293,91.42857 151.42859,68.57143 485.71433,160 334.2857,91.42857 428.5714,111.42857 491.4286,120"
-          style="fill:none;stroke:#000000;stroke-width:5px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1; transition: all 2000ms ease" />
-      </g>
-    </svg>
- 
+    <g
+      id="layer1">
+      <path
+          style="fill:none;stroke:#004aed;stroke-width:1.065;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;stroke-miterlimit:4;stroke-dasharray:none; transition: all 2000ms ease"
+          d="m 1.5119047,155.63691 c 0,0 22.6785703,-8.31548 45.3571423,-12.09524 22.67857,-3.77976 24.946428,-4.53571 38.55357,-3.77976 13.607146,0.75595 34.773803,6.04762 34.773803,6.04762 l 15.11905,5.29166"
+          id="path4574"
+          inkscape:connector-curvature="0" />
+
+      <path
+          style="fill:none;stroke:#0050ff;stroke-width:1.265;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;stroke-miterlimit:4;stroke-dasharray:none; transition: all 2000ms ease"
+          d="m 210.91071,159.41667 c 0,0 -4.53572,-4.53572 -28.72619,-11.33929 -24.19048,-6.80357 -37.79762,-9.07143 -47.625,-9.82738 -9.82738,-0.75595 -43.845235,1.5119 -43.845235,1.5119 0,0 -13.607142,2.26786 -24.94643,5.29167 -11.339285,3.02381 -32.505951,13.60714 -32.505951,13.60714"
+          id="path4576"
+          inkscape:connector-curvature="0" />
+
+      <circle
+          style="fill:#ffff00;stroke:#feff00;stroke-width:1.16499996;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1; transition: all 2000ms ease"
+          id="path4578"
+          cx="35.907738"
+          cy="98.5625"
+          r="15" />
+ </g>
+</svg>
 
     
     <script src="app.js"></script>
