--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>custom cursor</title>
+     <link rel="stylesheet" href="happyStyle.css">
      <link rel="stylesheet" href="style.css">
      <!--
      <script src="https://kit.fontawesome.com/67098eac32.js"></script>
@@ -12,35 +13,17 @@
      -->   
 </head>
  <body>
-    <svg
-        width="920px"
-        height="580px"
-        viewBox="0 0 1920 1080"
-        id="SVGRoot"
-    >
-    <g
-      id="layer1">
-      <path
-          style="fill:none;stroke:#004aed;stroke-width:1.065;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;stroke-miterlimit:4;stroke-dasharray:none; transition: all 2000ms ease"
-          d="m 1.5119047,155.63691 c 0,0 22.6785703,-8.31548 45.3571423,-12.09524 22.67857,-3.77976 24.946428,-4.53571 38.55357,-3.77976 13.607146,0.75595 34.773803,6.04762 34.773803,6.04762 l 15.11905,5.29166"
-          id="path4574"
-          inkscape:connector-curvature="0" />
-
-      <path
-          style="fill:none;stroke:#0050ff;stroke-width:1.265;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;stroke-miterlimit:4;stroke-dasharray:none; transition: all 2000ms ease"
-          d="m 210.91071,159.41667 c 0,0 -4.53572,-4.53572 -28.72619,-11.33929 -24.19048,-6.80357 -37.79762,-9.07143 -47.625,-9.82738 -9.82738,-0.75595 -43.845235,1.5119 -43.845235,1.5119 0,0 -13.607142,2.26786 -24.94643,5.29167 -11.339285,3.02381 -32.505951,13.60714 -32.505951,13.60714"
-          id="path4576"
-          inkscape:connector-curvature="0" />
-
-      <circle
-          style="fill:#ffff00;stroke:#feff00;stroke-width:1.16499996;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1; transition: all 2000ms ease"
-          id="path4578"
-          cx="35.907738"
-          cy="98.5625"
-          r="15" />
- </g>
-</svg>
-
+     <main class="column">
+         <div class="bar column"></div>
+         <div class="balls row">
+             <div class="baal"></div>
+             <div class="baal"></div>
+             <div class="baal"></div>
+             <div class="baal"></div>
+             <div class="baal"></div>
+             <div class="baal"></div>
+         </div>
+     </main>
     
     <script src="app.js"></script>
  </body>
