game size is editable

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <title>custom cursor</title>
+     <title>SVG Animations</title>
      <link rel="stylesheet" href="happyStyle.css">
      <link rel="stylesheet" href="style.css">
      <!--
@@ -15,15 +15,21 @@
  <body>
      <main class="column">
          <div class="bar column"></div>
-         <div class="balls row">
-             <div class="baal"></div>
-             <div class="baal"></div>
-             <div class="baal"></div>
-             <div class="baal"></div>
-             <div class="baal"></div>
-             <div class="baal"></div>
-         </div>
+         <div class="balls row"></div>
      </main>
+     <footer>
+         <div class="size">
+             <button id="increase">+</button>
+             <button id="decrease">-</button>
+         </div>
+         <div class="color">
+             <button>color wheel</button>
+         </div>
+         <div class="start">
+             <button>start</button>
+             <button>pause</button>
+         </div>
+     </footer>
     
     <script src="app.js"></script>
  </body>
