picking color button added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      -->   
 </head>
- <body>
+ <body class="column">
      <main class="column">
-         <div class="bar column"></div>
-         <div class="balls row"></div>
+        <div class="bar column"></div>
+        <div class="balls row"></div>
      </main>
      <footer>
          <div class="size">
@@ -23,11 +23,10 @@
              <button id="decrease">-</button>
          </div>
          <div class="color">
-             <button>color wheel</button>
+             <button id="randomColor">random color</button>
          </div>
          <div class="start">
-             <button>start</button>
-             <button>pause</button>
+            <button id="start">start</button>
          </div>
      </footer>
     
