--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
         <div class="bar column"></div>
         <div class="balls row"></div>
      </main>
-     <footer>
-         <div class="size">
-             <button id="increase">+</button>
-             <button id="decrease">-</button>
-         </div>
-         <div class="color">
-             <button id="randomColor">random color</button>
-         </div>
-         <div class="start">
-            <button id="start">start</button>
-         </div>
+     <footer class="column">
+        <div class="size">
+            <button id="increase">+</button>
+            <button id="decrease">-</button>
+        </div>
+        <button id="randomColor">random color</button>
+        <button id="start">start</button>
      </footer>
     
     <script src="app.js"></script>
